--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -22,7 +22,11 @@
         tools:layout="@layout/fragment_bottom_sheet_login">
         <action
             android:id="@+id/action_bottom_sheet_to_password_bottom_sheet"
-            app:destination="@+id/bottom_sheet_password" />
+            app:destination="@+id/bottom_sheet_password">
+            <argument
+                android:name="email"
+                app:argType="string" />
+        </action>
     </dialog>
 
     <dialog
